--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         <div class="card bg-transparent border my-3 my-md-0">
                             <img src="assets/imgs/blog-2.jpg" alt="img" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
-                                <h1 class="text-center mb-4"><a href="#" class="badge badge-primary">$12</a></h1>
+                                <h1 class="text-center mb-4"><a href="#" class="badge badge-primary">₹120</a></h1>
                                 <h4 class="pt20 pb20">Adipisci Totam</h4>
                                 <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa provident illum officiis fugit laudantium voluptatem sit iste delectus qui ex. </p>
                             </div>
@@ -227,7 +227,7 @@
                         <div class="card bg-transparent border my-3 my-md-0">
                             <img src="assets/imgs/blog-3.jpg" alt="img" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
-                                <h1 class="text-center mb-4"><a href="#" class="badge badge-primary">$8</a></h1>
+                                <h1 class="text-center mb-4"><a href="#" class="badge badge-primary">₹80</a></h1>
                                 <h4 class="pt20 pb20">Dicta Deserunt</h4>
                                 <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa provident illum officiis fugit laudantium voluptatem sit iste delectus qui ex. </p>
                             </div>
@@ -241,7 +241,7 @@
                         <div class="card bg-transparent border">
                             <img src="assets/imgs/blog-4.jpg" alt="img" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
-                                <h1 class="text-center mb-4"><a href="#" class="badge badge-primary">$15</a></h1>
+                                <h1 class="text-center mb-4"><a href="#" class="badge badge-primary">₹150</a></h1>
                                 <h4 class="pt20 pb20">Consectetur Adipisicing Elit</h4>
                                 <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa provident illum officiis fugit laudantium voluptatem sit iste delectus qui ex. </p>
                             </div>
@@ -251,7 +251,7 @@
                         <div class="card bg-transparent border">
                             <img src="assets/imgs/blog-5.jpg" alt="img" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
-                                <h1 class="text-center mb-4"><a href="#" class="badge badge-primary">$29</a></h1>
+                                <h1 class="text-center mb-4"><a href="#" class="badge badge-primary">₹290</a></h1>
                                 <h4 class="pt20 pb20">Ullam Laboriosam</h4>
                                 <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa provident illum officiis fugit laudantium voluptatem sit iste delectus qui ex. </p>
                             </div>
@@ -261,7 +261,7 @@
                         <div class="card bg-transparent border">
                             <img src="assets/imgs/blog-6.jpg" alt="img" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
-                                <h1 class="text-center mb-4"><a href="#" class="badge badge-primary">$3</a></h1>
+                                <h1 class="text-center mb-4"><a href="#" class="badge badge-primary">₹30</a></h1>
                                 <h4 class="pt20 pb20">Fugit Ipsam</h4>
                                 <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa provident illum officiis fugit laudantium voluptatem sit iste delectus qui ex. </p>
                             </div>
@@ -324,14 +324,14 @@
         </div>
     </div>
 
-    <!-- page footer  -->
+    <!-- page footer  --> 
     <div class="container-fluid bg-dark text-light has-height-md middle-items border-top text-center wow fadeIn">
         <div class="row">
             <div class="col-sm-4">
                 <h3>EMAIL US</h3>
                 <P class="text-muted">info@shuklatiffin.com</P>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4"> 
                 <h3>CALL US</h3>
                 <P class="text-muted"> +91 97522 83546</P>
             </div>
